Thu Oct 13 22:19:49 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/XMLSchema/id_map.hpp:
        * tools/Config_Handlers/XML_File_Intf.cpp:

          1) the XML_Helper is no longer terminated in the File_Intf destructor,
          this caused problems when several files were parsed in a single process.
          2) We now reset the ID_Map before each parsing event.

Thu Oct 13 19:10:36 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DAnCE_Utility.h:
        * dance/DAnCE_Utility.cpp:
        * dance/Plan_Launcher/Plan_Launcher.cpp:
        * dance/Plan_Launcher/Plan_Launcher.mpc:
        * tools/Domain_Validator:
        * tools/Domain_Validator/CORBA:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.h:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.cpp:
        * tools/Domain_Validator/Domain_Validator.idl:
        * tools/Domain_Validator/Domain_Validator.mpc:

          Initial domain validator implementation.

Thu Oct 13 19:05:45 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DAnCE_Properties.idl:

          Corrected string literals for identifying CCM instance types.

Mon Oct 10 08:48:51 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.0.5 released.

Fri Oct  7 10:49:04 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * docs/sources/Error_Documentation.oo3/contents.xml:
          Fuzz

Fri Oct  7 09:46:53 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * docs/DAnCE_Logging.txt:
        * docs/LocalityManager-Plugins.txt:
          Fuzz.

Fri Oct  7 09:21:58 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * dance/NodeManager/README:
          Fuzz: Id-tags.

Fri Oct  7 08:02:38 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.h:
          Fuzz: Trailing whitespace

        * docs/sources/Error_Documentation.oo3/contents.xml: